--- a/golf/fusion/data_loader.ipynb
+++ b/golf/fusion/data_loader.ipynb
@@ -1233,7 +1233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "2f02e304",
    "metadata": {},
    "outputs": [
@@ -1241,7 +1241,34 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[INFO] #Train=1477 #Valid=165 #Test=295\n",
+      "[❌] 20201127_General_052_DOS_A_F30_MM_071_crop: 프레임 6개로 clip_len 미만 → 제외\n",
+      "[❌] 20201118_General_016_DOC_A_F30_SM_048_crop: 프레임 17개로 clip_len 미만 → 제외\n",
+      "[❌] 20201120_General_021_NOC_A_M40_MM_044_crop: 프레임 30개로 clip_len 미만 → 제외\n",
+      "[❌] 20201118_General_019_NOC_A_M30_MM_056_crop: 프레임 24개로 clip_len 미만 → 제외\n",
+      "[❌] 20201118_General_014_DOC_A_M40_MT_025_crop: 프레임 43개로 clip_len 미만 → 제외\n",
+      "[❌] 20201120_General_026_DOC_A_M40_MM_051_crop: 프레임 32개로 clip_len 미만 → 제외\n",
+      "[❌] 20201127_General_052_DOS_A_F30_MM_025_crop: 프레임 29개로 clip_len 미만 → 제외\n",
+      "[❌] 20201124_General_036_DOS_A_M50_MM_041_crop: 프레임 14개로 clip_len 미만 → 제외\n",
+      "[❌] 20201118_General_017_DOR_A_M40_MM_057_crop: 프레임 46개로 clip_len 미만 → 제외\n",
+      "[❌] 20201124_General_034_DOS_A_M40_MM_046_crop: 프레임 36개로 clip_len 미만 → 제외\n",
+      "[❌] 20201120_General_021_DOC_A_M40_MM_032_crop: 프레임 16개로 clip_len 미만 → 제외\n",
+      "[❌] 20201127_General_056_DOC_A_F20_MM_056_crop: 프레임 28개로 clip_len 미만 → 제외\n",
+      "[❌] 20201123_General_030_DOS_A_M40_MM_014_crop: 프레임 24개로 clip_len 미만 → 제외\n",
+      "[❌] 20201120_General_021_DOC_A_M40_MM_013_crop: 프레임 23개로 clip_len 미만 → 제외\n",
+      "[❌] 20201127_General_056_DOC_A_F20_MM_015_crop: 프레임 41개로 clip_len 미만 → 제외\n",
+      "[❌] 20201120_General_028_DOC_A_M40_MM_046_crop: 프레임 19개로 clip_len 미만 → 제외\n",
+      "[❌] 20201116_General_003_DOS_A_F30_MM_086_crop: 프레임 11개로 clip_len 미만 → 제외\n",
+      "[❌] 20201123_General_032_DOS_A_F30_MM_053_crop: 프레임 25개로 clip_len 미만 → 제외\n",
+      "[❌] 20201123_General_032_DOS_A_F30_MM_054_crop: 프레임 8개로 clip_len 미만 → 제외\n",
+      "[❌] 20201127_General_054_DOC_A_F30_SM_083_crop: 프레임 36개로 clip_len 미만 → 제외\n",
+      "[❌] 20201123_General_032_DOS_A_F30_MM_095_crop: 프레임 43개로 clip_len 미만 → 제외\n",
+      "[❌] 20201211_General_118_DOC_A_M40_MM_074_crop: 프레임 14개로 clip_len 미만 → 제외\n",
+      "[❌] 20201211_General_119_DOC_A_M20_MM_030_crop: 프레임 44개로 clip_len 미만 → 제외\n",
+      "[❌] 20201211_General_122_DOC_A_M50_MM_025_crop: 프레임 43개로 clip_len 미만 → 제외\n",
+      "[❌] 20201210_General_112_DOC_A_M20_MM_043_crop: 프레임 32개로 clip_len 미만 → 제외\n",
+      "[❌] 20201210_General_114_DOC_A_M30_MM_012_crop: 프레임 5개로 clip_len 미만 → 제외\n",
+      "[❌] 20201210_General_114_DOC_A_M30_MM_013_crop: 프레임 34개로 clip_len 미만 → 제외\n",
+      "[INFO] #Train=1457 #Valid=164 #Test=289\n",
       "[⚠️] NaN/Inf in keypoint: 20201116_General_003_DOS_A_F30_MM_060_crop → 보간/보강 처리\n",
       "[⚠️] NaN/Inf in keypoint: 20201116_General_002_DOS_A_F40_MM_053_crop → 보간/보강 처리\n",
       "[⚠️] NaN/Inf in keypoint: 20201123_General_032_DOS_A_F30_MM_031_crop → 보간/보강 처리\n",
@@ -1251,7 +1278,6 @@
       "[⚠️] NaN/Inf in keypoint: 20201123_General_032_DOS_A_F30_MM_062_crop → 보간/보강 처리\n",
       "[⚠️] NaN/Inf in keypoint: 20201123_General_032_DOS_A_F30_MM_047_crop → 보간/보강 처리\n",
       "[⚠️] NaN/Inf in keypoint: 20201120_General_028_DOC_A_M40_MM_002_crop → 보간/보강 처리\n",
-      "[⚠️] NaN/Inf in keypoint: 20201118_General_017_DOR_A_M40_MM_057_crop → 보간/보강 처리\n",
       "[⚠️] NaN/Inf in keypoint: 20201127_General_052_DOS_A_F30_MM_053_crop → 보간/보강 처리\n",
       "[⚠️] NaN/Inf in keypoint: 20201120_General_028_DOC_A_M40_MM_039_crop → 보간/보강 처리\n",
       "[⚠️] NaN/Inf in keypoint: 20201123_General_030_DOS_A_M40_MM_055_crop → 보간/보강 처리\n",
@@ -1260,8 +1286,6 @@
       "[⚠️] NaN/Inf in keypoint: 20201130_General_058_DOS_A_M30_MM_023_crop → 보간/보강 처리\n",
       "[⚠️] NaN/Inf in keypoint: 20201123_General_032_DOS_A_F30_MM_065_crop → 보간/보강 처리\n",
       "[⚠️] NaN/Inf in keypoint: 20201118_General_015_DOC_A_M40_SM_020_crop → 보간/보강 처리\n",
-      "[⚠️] NaN/Inf in keypoint: 20201123_General_032_DOS_A_F30_MM_095_crop → 보간/보강 처리\n",
-      "[❌] All-zero keypoint: 20201123_General_032_DOS_A_F30_MM_095_crop → 제외\n",
       "[⚠️] NaN/Inf in keypoint: 20201211_General_117_DOC_A_M30_MM_047_crop → 보간/보강 처리\n",
       "[⚠️] NaN/Inf in keypoint: 20201211_General_117_DOC_A_M30_MM_066_crop → 보간/보강 처리\n",
       "[RUN] conda run -n timesformer python -u D:\\Jabez\\golf\\fusion\\assemble_timesformer_embeddings.py --per-video-dir D:\\Jabez\\golf\\fusion\\embedding_data\\timesformer\\per_video --id-list D:\\Jabez\\golf\\fusion\\ids_txt\\train_ids.txt --out-dir D:\\Jabez\\golf\\fusion\\embedding_data\\timesformer\\train\n",
@@ -1280,14 +1304,13 @@
       "[WARN] 20201120_General_021_DOC_A_M40_MM_060_crop.npy 없음\n",
       "[WARN] 20201127_General_052_DOS_A_F30_MM_085_crop.npy 없음\n",
       "[WARN] 20201124_General_033_DOS_A_M40_MM_032_crop.npy 없음\n",
-      "[WARN] 20201127_General_056_DOC_A_F20_MM_056_crop.npy 없음\n",
       "[WARN] 20201127_General_056_DOC_A_F20_MM_025_crop.npy 없음\n",
       "[WARN] 20201124_General_033_DOS_A_M40_MM_071_crop.npy 없음\n",
       "[WARN] 20201127_General_052_DOS_A_F30_MM_035_crop.npy 없음\n",
       "[WARN] 20201124_General_033_DOS_A_M40_MM_061_crop.npy 없음\n",
       "[WARN] 20201123_General_032_DOS_A_F30_MM_088_crop.npy 없음\n",
       "[WARN] 20201123_General_032_DOS_A_F30_MM_063_crop.npy 없음\n",
-      "Saved: (1455, 768), (1455,), (1455,)\n",
+      "Saved: (1436, 768), (1436,), (1436,)\n",
       "\n",
       "\n",
       "[RUN] conda run -n timesformer python -u D:\\Jabez\\golf\\fusion\\assemble_timesformer_embeddings.py --per-video-dir D:\\Jabez\\golf\\fusion\\embedding_data\\timesformer\\per_video --id-list D:\\Jabez\\golf\\fusion\\ids_txt\\valid_ids.txt --out-dir D:\\Jabez\\golf\\fusion\\embedding_data\\timesformer\\valid\n",
@@ -1306,7 +1329,6 @@
       "[WARN] 20201211_General_117_DOC_A_M30_MM_002_crop.npy 없음\n",
       "[WARN] 20201211_General_117_DOC_A_M30_MM_014_crop.npy 없음\n",
       "[WARN] 20201211_General_117_DOC_A_M30_MM_068_crop.npy 없음\n",
-      "[WARN] 20201211_General_118_DOC_A_M40_MM_074_crop.npy 없음\n",
       "[WARN] 20201211_General_120_DOC_A_M30_MM_055_crop.npy 없음\n",
       "[WARN] 20201211_General_120_DOC_A_M30_MM_063_crop.npy 없음\n",
       "[WARN] 20201211_General_120_DOC_A_M30_MM_071_crop.npy 없음\n",
@@ -1322,18 +1344,18 @@
       "[WARN] 20201210_General_114_DOC_A_M30_MM_035_crop.npy 없음\n",
       "[WARN] 20201210_General_114_DOC_A_M30_MM_043_crop.npy 없음\n",
       "[WARN] 20201210_General_114_NOC_A_M30_MM_075_crop.npy 없음\n",
-      "Saved: (272, 768), (272,), (272,)\n",
+      "Saved: (267, 768), (267,), (267,)\n",
       "\n",
       "\n",
       "[RUN] conda run -n mmaction python -u D:\\Jabez\\golf\\fusion\\extract_embedding_stgcn.py --cfg D:\\Jabez\\golf\\fusion\\mmaction_files\\my_stgcnpp.py --ckpt D:\\mmaction2\\checkpoints\\stgcnpp_8xb16-joint-u100-80e_ntu60-xsub-keypoint-2d_20221228-86e1e77a.pth --device cuda:0 --out-dir D:\\Jabez\\golf\\fusion\\embedding_data\\stgcnpp --train-pkl D:\\golfDataset\\dataset\\crop_pkl\\skeleton_dataset_train.pkl --valid-pkl D:\\golfDataset\\dataset\\crop_pkl\\skeleton_dataset_valid.pkl --test-pkl D:\\golfDataset\\dataset\\crop_pkl\\skeleton_dataset_test.pkl --num-workers 0\n",
-      "07/30 14:45:46 - mmengine - \u001b[4m\u001b[97mINFO\u001b[0m - \n",
+      "07/31 20:22:25 - mmengine - \u001b[4m\u001b[97mINFO\u001b[0m - \n",
       "------------------------------------------------------------\n",
       "System environment:\n",
       "    sys.platform: win32\n",
       "    Python: 3.8.20 (default, Oct  3 2024, 15:19:54) [MSC v.1929 64 bit (AMD64)]\n",
       "    CUDA available: True\n",
       "    MUSA available: False\n",
-      "    numpy_random_seed: 144888097\n",
+      "    numpy_random_seed: 1277252623\n",
       "    GPU 0: NVIDIA GeForce RTX 4060 Laptop GPU\n",
       "    CUDA_HOME: C:\\Program Files\\NVIDIA GPU Computing Toolkit\\CUDA\\v12.6\n",
       "    NVCC: Cuda compilation tools, release 12.6, V12.6.20\n",
@@ -1362,13 +1384,13 @@
       "    cudnn_benchmark: False\n",
       "    dist_cfg: {'backend': 'nccl'}\n",
       "    mp_cfg: {'mp_start_method': 'fork', 'opencv_num_threads': 0}\n",
-      "    seed: 144888097\n",
+      "    seed: 1277252623\n",
       "    Distributed launcher: none\n",
       "    Distributed training: False\n",
       "    GPU number: 1\n",
       "------------------------------------------------------------\n",
       "\n",
-      "07/30 14:45:46 - mmengine - \u001b[4m\u001b[97mINFO\u001b[0m - Config:\n",
+      "07/31 20:22:25 - mmengine - \u001b[4m\u001b[97mINFO\u001b[0m - Config:\n",
       "ann_file = 'D:\\\\golfDataset\\\\dataset\\\\train\\\\crop_pkl\\\\skeleton_dataset_90_10.pkl'\n",
       "auto_scale_lr = dict(base_batch_size=128, enable=False)\n",
       "custom_hooks = [\n",
@@ -1553,8 +1575,8 @@
       "    ])\n",
       "work_dir = './work_dirs\\\\my_stgcnpp'\n",
       "\n",
-      "07/30 14:45:47 - mmengine - \u001b[4m\u001b[97mINFO\u001b[0m - Distributed training is not used, all SyncBatchNorm (SyncBN) layers in the model will be automatically reverted to BatchNormXd layers if they are used.\n",
-      "07/30 14:45:47 - mmengine - \u001b[4m\u001b[97mINFO\u001b[0m - Hooks will be executed in the following order:\n",
+      "07/31 20:22:25 - mmengine - \u001b[4m\u001b[97mINFO\u001b[0m - Distributed training is not used, all SyncBatchNorm (SyncBN) layers in the model will be automatically reverted to BatchNormXd layers if they are used.\n",
+      "07/31 20:22:25 - mmengine - \u001b[4m\u001b[97mINFO\u001b[0m - Hooks will be executed in the following order:\n",
       "before_run:\n",
       "(VERY_HIGH   ) RuntimeInfoHook                    \n",
       "(BELOW_NORMAL) LoggerHook                         \n",
@@ -1647,10 +1669,10 @@
       "\n",
       "size mismatch for cls_head.fc.weight: copying a param with shape torch.Size([60, 256]) from checkpoint, the shape in current model is torch.Size([2, 256]).\n",
       "size mismatch for cls_head.fc.bias: copying a param with shape torch.Size([60]) from checkpoint, the shape in current model is torch.Size([2]).\n",
-      "07/30 14:45:48 - mmengine - \u001b[4m\u001b[97mINFO\u001b[0m - 295 videos remain after valid thresholding\n",
-      "07/30 14:45:48 - mmengine - \u001b[5m\u001b[4m\u001b[33mWARNING\u001b[0m - The prefix is not set in metric class DumpResults.\n",
-      "✅ test done: embeddings=(295, 10, 256), labels=(295, 1), ids=(295,)\n",
-      "07/30 14:45:55 - mmengine - \u001b[4m\u001b[97mINFO\u001b[0m - \n",
+      "07/31 20:22:26 - mmengine - \u001b[4m\u001b[97mINFO\u001b[0m - 289 videos remain after valid thresholding\n",
+      "07/31 20:22:26 - mmengine - \u001b[5m\u001b[4m\u001b[33mWARNING\u001b[0m - The prefix is not set in metric class DumpResults.\n",
+      "✅ test done: embeddings=(289, 10, 256), labels=(289, 1), ids=(289,)\n",
+      "07/31 20:22:33 - mmengine - \u001b[4m\u001b[97mINFO\u001b[0m - \n",
       "------------------------------------------------------------\n",
       "System environment:\n",
       "    sys.platform: win32\n",
@@ -1692,7 +1714,7 @@
       "    GPU number: 1\n",
       "------------------------------------------------------------\n",
       "\n",
-      "07/30 14:45:55 - mmengine - \u001b[4m\u001b[97mINFO\u001b[0m - Config:\n",
+      "07/31 20:22:33 - mmengine - \u001b[4m\u001b[97mINFO\u001b[0m - Config:\n",
       "ann_file = 'D:\\\\golfDataset\\\\dataset\\\\train\\\\crop_pkl\\\\skeleton_dataset_90_10.pkl'\n",
       "auto_scale_lr = dict(base_batch_size=128, enable=False)\n",
       "custom_hooks = [\n",
@@ -1877,8 +1899,8 @@
       "    ])\n",
       "work_dir = './work_dirs\\\\my_stgcnpp'\n",
       "\n",
-      "07/30 14:45:56 - mmengine - \u001b[4m\u001b[97mINFO\u001b[0m - Distributed training is not used, all SyncBatchNorm (SyncBN) layers in the model will be automatically reverted to BatchNormXd layers if they are used.\n",
-      "07/30 14:45:56 - mmengine - \u001b[4m\u001b[97mINFO\u001b[0m - Hooks will be executed in the following order:\n",
+      "07/31 20:22:33 - mmengine - \u001b[4m\u001b[97mINFO\u001b[0m - Distributed training is not used, all SyncBatchNorm (SyncBN) layers in the model will be automatically reverted to BatchNormXd layers if they are used.\n",
+      "07/31 20:22:33 - mmengine - \u001b[4m\u001b[97mINFO\u001b[0m - Hooks will be executed in the following order:\n",
       "before_run:\n",
       "(VERY_HIGH   ) RuntimeInfoHook                    \n",
       "(BELOW_NORMAL) LoggerHook                         \n",
@@ -1971,10 +1993,10 @@
       "\n",
       "size mismatch for cls_head.fc.weight: copying a param with shape torch.Size([60, 256]) from checkpoint, the shape in current model is torch.Size([2, 256]).\n",
       "size mismatch for cls_head.fc.bias: copying a param with shape torch.Size([60]) from checkpoint, the shape in current model is torch.Size([2]).\n",
-      "07/30 14:45:56 - mmengine - \u001b[4m\u001b[97mINFO\u001b[0m - 1477 videos remain after valid thresholding\n",
-      "07/30 14:45:56 - mmengine - \u001b[5m\u001b[4m\u001b[33mWARNING\u001b[0m - The prefix is not set in metric class DumpResults.\n",
-      "✅ train done: embeddings=(1477, 10, 256), labels=(1477, 1), ids=(1477,)\n",
-      "07/30 14:46:28 - mmengine - \u001b[4m\u001b[97mINFO\u001b[0m - \n",
+      "07/31 20:22:33 - mmengine - \u001b[4m\u001b[97mINFO\u001b[0m - 1457 videos remain after valid thresholding\n",
+      "07/31 20:22:33 - mmengine - \u001b[5m\u001b[4m\u001b[33mWARNING\u001b[0m - The prefix is not set in metric class DumpResults.\n",
+      "✅ train done: embeddings=(1457, 10, 256), labels=(1457, 1), ids=(1457,)\n",
+      "07/31 20:23:05 - mmengine - \u001b[4m\u001b[97mINFO\u001b[0m - \n",
       "------------------------------------------------------------\n",
       "System environment:\n",
       "    sys.platform: win32\n",
@@ -2016,7 +2038,7 @@
       "    GPU number: 1\n",
       "------------------------------------------------------------\n",
       "\n",
-      "07/30 14:46:28 - mmengine - \u001b[4m\u001b[97mINFO\u001b[0m - Config:\n",
+      "07/31 20:23:06 - mmengine - \u001b[4m\u001b[97mINFO\u001b[0m - Config:\n",
       "ann_file = 'D:\\\\golfDataset\\\\dataset\\\\train\\\\crop_pkl\\\\skeleton_dataset_90_10.pkl'\n",
       "auto_scale_lr = dict(base_batch_size=128, enable=False)\n",
       "custom_hooks = [\n",
@@ -2201,8 +2223,8 @@
       "    ])\n",
       "work_dir = './work_dirs\\\\my_stgcnpp'\n",
       "\n",
-      "07/30 14:46:28 - mmengine - \u001b[4m\u001b[97mINFO\u001b[0m - Distributed training is not used, all SyncBatchNorm (SyncBN) layers in the model will be automatically reverted to BatchNormXd layers if they are used.\n",
-      "07/30 14:46:28 - mmengine - \u001b[4m\u001b[97mINFO\u001b[0m - Hooks will be executed in the following order:\n",
+      "07/31 20:23:06 - mmengine - \u001b[4m\u001b[97mINFO\u001b[0m - Distributed training is not used, all SyncBatchNorm (SyncBN) layers in the model will be automatically reverted to BatchNormXd layers if they are used.\n",
+      "07/31 20:23:06 - mmengine - \u001b[4m\u001b[97mINFO\u001b[0m - Hooks will be executed in the following order:\n",
       "before_run:\n",
       "(VERY_HIGH   ) RuntimeInfoHook                    \n",
       "(BELOW_NORMAL) LoggerHook                         \n",
@@ -2295,8 +2317,8 @@
       "\n",
       "size mismatch for cls_head.fc.weight: copying a param with shape torch.Size([60, 256]) from checkpoint, the shape in current model is torch.Size([2, 256]).\n",
       "size mismatch for cls_head.fc.bias: copying a param with shape torch.Size([60]) from checkpoint, the shape in current model is torch.Size([2]).\n",
-      "07/30 14:46:28 - mmengine - \u001b[4m\u001b[97mINFO\u001b[0m - 164 videos remain after valid thresholding\n",
-      "07/30 14:46:28 - mmengine - \u001b[5m\u001b[4m\u001b[33mWARNING\u001b[0m - The prefix is not set in metric class DumpResults.\n",
+      "07/31 20:23:06 - mmengine - \u001b[4m\u001b[97mINFO\u001b[0m - 164 videos remain after valid thresholding\n",
+      "07/31 20:23:06 - mmengine - \u001b[5m\u001b[4m\u001b[33mWARNING\u001b[0m - The prefix is not set in metric class DumpResults.\n",
       "✅ valid done: embeddings=(164, 10, 256), labels=(164, 1), ids=(164,)\n",
       "\n",
       "\n",
@@ -2336,6 +2358,8 @@
     "    4,12,9,13,10,\n",
     "    14,11\n",
     "]\n",
+    "\n",
+    "CLIP_LEN = 50  # clip_len과 반드시 동일하게!\n",
     "\n",
     "def run(cmd, env):\n",
     "    full = ['conda', 'run', '-n', env] + cmd\n",
@@ -2402,11 +2426,15 @@
     "        try:\n",
     "            info = load_and_process(p)\n",
     "            kp = info['keypoint']\n",
-    "            # NaN/Inf 보강\n",
+    "            score = info['keypoint_score']\n",
     "            if np.isnan(kp).any() or np.isinf(kp).any():\n",
     "                print(f\"[⚠️] NaN/Inf in keypoint: {vid} → 보간/보강 처리\")\n",
     "                kp = fix_nan_inf(kp)\n",
     "                info['keypoint'] = kp\n",
+    "            if np.isnan(score).any() or np.isinf(score).any():\n",
+    "                print(f\"[⚠️] NaN/Inf in keypoint_score: {vid} → 0으로 대체\")\n",
+    "                score = np.nan_to_num(score)\n",
+    "                info['keypoint_score'] = score\n",
     "            # keypoint가 전부 0이면 제외\n",
     "            if (kp == 0).all():\n",
     "                print(f\"[❌] All-zero keypoint: {vid} → 제외\")\n",
@@ -2443,12 +2471,21 @@
     "        ids[vid] = {'csv': csv, 'lbl': label}\n",
     "    return ids\n",
     "\n",
+    "def filter_ids_by_min_frames(id_list, id_map, min_frames=CLIP_LEN):\n",
+    "    \"\"\"프레임 수가 min_frames 미만인 id는 제거\"\"\"\n",
+    "    filtered = []\n",
+    "    for vid in id_list:\n",
+    "        info = load_and_process(id_map[vid]['csv'])\n",
+    "        if info['total_frames'] < min_frames:\n",
+    "            print(f\"[❌] {vid}: 프레임 {info['total_frames']}개로 clip_len 미만 → 제외\")\n",
+    "            continue\n",
+    "        filtered.append(vid)\n",
+    "    return filtered\n",
+    "\n",
     "def main():\n",
     "    random.seed(SEED)\n",
     "\n",
-    "    # -------------------------------\n",
     "    # [1] Train/Valid Pool (train 폴더 기준)\n",
-    "    # -------------------------------\n",
     "    train_ids_map = dict()\n",
     "    for cat, lbl in [('balanced_true',1), ('false',0)]:\n",
     "        kp_dir = TRAIN_ROOT / cat / 'crop_keypoint'\n",
@@ -2459,14 +2496,17 @@
     "    train_ids = all_train_ids[:n_train]\n",
     "    valid_ids = all_train_ids[n_train:]\n",
     "\n",
-    "    # -------------------------------\n",
     "    # [2] Test Pool (test 폴더 기준)\n",
-    "    # -------------------------------\n",
     "    test_ids_map = dict()\n",
     "    for cat, lbl in [('balanced_true',1), ('false',0)]:\n",
     "        kp_dir = TEST_ROOT / cat / 'crop_keypoint'\n",
     "        test_ids_map.update(collect_ids(kp_dir, lbl))\n",
     "    test_ids = list(test_ids_map.keys())\n",
+    "\n",
+    "    # === [NEW] 프레임 수 필터링 (id txt, pkl, embedding 모두에 적용) ===\n",
+    "    train_ids = filter_ids_by_min_frames(train_ids, train_ids_map, CLIP_LEN)\n",
+    "    valid_ids = filter_ids_by_min_frames(valid_ids, train_ids_map, CLIP_LEN)\n",
+    "    test_ids  = filter_ids_by_min_frames(test_ids,  test_ids_map,  CLIP_LEN)\n",
     "\n",
     "    print(f\"[INFO] #Train={len(train_ids)} #Valid={len(valid_ids)} #Test={len(test_ids)}\")\n",
     "\n",
