stgcn finetuning setting complete
stgcn 파인튜닝 완료
test 데이터에 대해 최대 62%의 정확도를 가짐

--- a/golf/fusion/data_loader.ipynb
+++ b/golf/fusion/data_loader.ipynb
@@ -16,7 +16,7 @@
    "source": [
     "model은  \n",
     "'D:\\\\mmaction2\\\\checkpoints\\\\stgcnpp_8xb16-joint-u100-80e_ntu60-xsub-keypoint-2d_20221228-86e1e77a.pth'  \n",
-    "\"D:\\mmaction2\\work_dirs\\my_stgcnpp\\best_acc_top1_epoch_5.pth\""
+    "\"D:\\mmaction2\\work_dirs\\my_stgcnpp\\best_acc_top1_epoch.pth\""
    ]
   },
   {
@@ -1232,6 +1232,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "a7902ef6",
+   "metadata": {},
+   "source": [
+    "MODEL은 stgcn의 모델, 가장 test 성능이 높은  \n",
+    "\"D:\\mmaction2\\work_dirs\\my_stgcnpp\\epoch_2.pth\""
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "2f02e304",
@@ -1270,24 +1279,43 @@
       "[❌] 20201210_General_114_DOC_A_M30_MM_013_crop: 프레임 34개로 clip_len 미만 → 제외\n",
       "[INFO] #Train=1457 #Valid=164 #Test=289\n",
       "[⚠️] NaN/Inf in keypoint: 20201116_General_003_DOS_A_F30_MM_060_crop → 보간/보강 처리\n",
+      "[⚠️] NaN/Inf in keypoint_score: 20201116_General_003_DOS_A_F30_MM_060_crop → 0으로 대체\n",
       "[⚠️] NaN/Inf in keypoint: 20201116_General_002_DOS_A_F40_MM_053_crop → 보간/보강 처리\n",
+      "[⚠️] NaN/Inf in keypoint_score: 20201116_General_002_DOS_A_F40_MM_053_crop → 0으로 대체\n",
       "[⚠️] NaN/Inf in keypoint: 20201123_General_032_DOS_A_F30_MM_031_crop → 보간/보강 처리\n",
+      "[⚠️] NaN/Inf in keypoint_score: 20201123_General_032_DOS_A_F30_MM_031_crop → 0으로 대체\n",
       "[⚠️] NaN/Inf in keypoint: 20201120_General_028_NOC_A_M40_MM_064_crop → 보간/보강 처리\n",
+      "[⚠️] NaN/Inf in keypoint_score: 20201120_General_028_NOC_A_M40_MM_064_crop → 0으로 대체\n",
       "[⚠️] NaN/Inf in keypoint: 20201123_General_030_DOS_A_M40_MM_036_crop → 보간/보강 처리\n",
+      "[⚠️] NaN/Inf in keypoint_score: 20201123_General_030_DOS_A_M40_MM_036_crop → 0으로 대체\n",
       "[⚠️] NaN/Inf in keypoint: 20201123_General_032_DOS_A_F30_MM_007_crop → 보간/보강 처리\n",
+      "[⚠️] NaN/Inf in keypoint_score: 20201123_General_032_DOS_A_F30_MM_007_crop → 0으로 대체\n",
       "[⚠️] NaN/Inf in keypoint: 20201123_General_032_DOS_A_F30_MM_062_crop → 보간/보강 처리\n",
+      "[⚠️] NaN/Inf in keypoint_score: 20201123_General_032_DOS_A_F30_MM_062_crop → 0으로 대체\n",
       "[⚠️] NaN/Inf in keypoint: 20201123_General_032_DOS_A_F30_MM_047_crop → 보간/보강 처리\n",
+      "[⚠️] NaN/Inf in keypoint_score: 20201123_General_032_DOS_A_F30_MM_047_crop → 0으로 대체\n",
       "[⚠️] NaN/Inf in keypoint: 20201120_General_028_DOC_A_M40_MM_002_crop → 보간/보강 처리\n",
+      "[⚠️] NaN/Inf in keypoint_score: 20201120_General_028_DOC_A_M40_MM_002_crop → 0으로 대체\n",
       "[⚠️] NaN/Inf in keypoint: 20201127_General_052_DOS_A_F30_MM_053_crop → 보간/보강 처리\n",
+      "[⚠️] NaN/Inf in keypoint_score: 20201127_General_052_DOS_A_F30_MM_053_crop → 0으로 대체\n",
       "[⚠️] NaN/Inf in keypoint: 20201120_General_028_DOC_A_M40_MM_039_crop → 보간/보강 처리\n",
+      "[⚠️] NaN/Inf in keypoint_score: 20201120_General_028_DOC_A_M40_MM_039_crop → 0으로 대체\n",
       "[⚠️] NaN/Inf in keypoint: 20201123_General_030_DOS_A_M40_MM_055_crop → 보간/보강 처리\n",
+      "[⚠️] NaN/Inf in keypoint_score: 20201123_General_030_DOS_A_M40_MM_055_crop → 0으로 대체\n",
       "[⚠️] NaN/Inf in keypoint: 20201123_General_030_DOS_A_M40_MM_017_crop → 보간/보강 처리\n",
+      "[⚠️] NaN/Inf in keypoint_score: 20201123_General_030_DOS_A_M40_MM_017_crop → 0으로 대체\n",
       "[⚠️] NaN/Inf in keypoint: 20201123_General_032_DOS_A_F30_MM_046_crop → 보간/보강 처리\n",
+      "[⚠️] NaN/Inf in keypoint_score: 20201123_General_032_DOS_A_F30_MM_046_crop → 0으로 대체\n",
       "[⚠️] NaN/Inf in keypoint: 20201130_General_058_DOS_A_M30_MM_023_crop → 보간/보강 처리\n",
+      "[⚠️] NaN/Inf in keypoint_score: 20201130_General_058_DOS_A_M30_MM_023_crop → 0으로 대체\n",
       "[⚠️] NaN/Inf in keypoint: 20201123_General_032_DOS_A_F30_MM_065_crop → 보간/보강 처리\n",
+      "[⚠️] NaN/Inf in keypoint_score: 20201123_General_032_DOS_A_F30_MM_065_crop → 0으로 대체\n",
       "[⚠️] NaN/Inf in keypoint: 20201118_General_015_DOC_A_M40_SM_020_crop → 보간/보강 처리\n",
+      "[⚠️] NaN/Inf in keypoint_score: 20201118_General_015_DOC_A_M40_SM_020_crop → 0으로 대체\n",
       "[⚠️] NaN/Inf in keypoint: 20201211_General_117_DOC_A_M30_MM_047_crop → 보간/보강 처리\n",
+      "[⚠️] NaN/Inf in keypoint_score: 20201211_General_117_DOC_A_M30_MM_047_crop → 0으로 대체\n",
       "[⚠️] NaN/Inf in keypoint: 20201211_General_117_DOC_A_M30_MM_066_crop → 보간/보강 처리\n",
+      "[⚠️] NaN/Inf in keypoint_score: 20201211_General_117_DOC_A_M30_MM_066_crop → 0으로 대체\n",
       "[RUN] conda run -n timesformer python -u D:\\Jabez\\golf\\fusion\\assemble_timesformer_embeddings.py --per-video-dir D:\\Jabez\\golf\\fusion\\embedding_data\\timesformer\\per_video --id-list D:\\Jabez\\golf\\fusion\\ids_txt\\train_ids.txt --out-dir D:\\Jabez\\golf\\fusion\\embedding_data\\timesformer\\train\n",
       "[WARN] 20201120_General_022_DOC_A_M40_MS_067_crop.npy 없음\n",
       "[WARN] 20201127_General_056_DOC_A_F20_MM_011_crop.npy 없음\n",
@@ -1348,14 +1376,14 @@
       "\n",
       "\n",
       "[RUN] conda run -n mmaction python -u D:\\Jabez\\golf\\fusion\\extract_embedding_stgcn.py --cfg D:\\Jabez\\golf\\fusion\\mmaction_files\\my_stgcnpp.py --ckpt D:\\mmaction2\\checkpoints\\stgcnpp_8xb16-joint-u100-80e_ntu60-xsub-keypoint-2d_20221228-86e1e77a.pth --device cuda:0 --out-dir D:\\Jabez\\golf\\fusion\\embedding_data\\stgcnpp --train-pkl D:\\golfDataset\\dataset\\crop_pkl\\skeleton_dataset_train.pkl --valid-pkl D:\\golfDataset\\dataset\\crop_pkl\\skeleton_dataset_valid.pkl --test-pkl D:\\golfDataset\\dataset\\crop_pkl\\skeleton_dataset_test.pkl --num-workers 0\n",
-      "07/31 20:22:25 - mmengine - \u001b[4m\u001b[97mINFO\u001b[0m - \n",
+      "08/01 02:41:55 - mmengine - \u001b[4m\u001b[97mINFO\u001b[0m - \n",
       "------------------------------------------------------------\n",
       "System environment:\n",
       "    sys.platform: win32\n",
       "    Python: 3.8.20 (default, Oct  3 2024, 15:19:54) [MSC v.1929 64 bit (AMD64)]\n",
       "    CUDA available: True\n",
       "    MUSA available: False\n",
-      "    numpy_random_seed: 1277252623\n",
+      "    numpy_random_seed: 743510244\n",
       "    GPU 0: NVIDIA GeForce RTX 4060 Laptop GPU\n",
       "    CUDA_HOME: C:\\Program Files\\NVIDIA GPU Computing Toolkit\\CUDA\\v12.6\n",
       "    NVCC: Cuda compilation tools, release 12.6, V12.6.20\n",
@@ -1384,13 +1412,13 @@
       "    cudnn_benchmark: False\n",
       "    dist_cfg: {'backend': 'nccl'}\n",
       "    mp_cfg: {'mp_start_method': 'fork', 'opencv_num_threads': 0}\n",
-      "    seed: 1277252623\n",
+      "    seed: 743510244\n",
       "    Distributed launcher: none\n",
       "    Distributed training: False\n",
       "    GPU number: 1\n",
       "------------------------------------------------------------\n",
       "\n",
-      "07/31 20:22:25 - mmengine - \u001b[4m\u001b[97mINFO\u001b[0m - Config:\n",
+      "08/01 02:41:55 - mmengine - \u001b[4m\u001b[97mINFO\u001b[0m - Config:\n",
       "ann_file = 'D:\\\\golfDataset\\\\dataset\\\\train\\\\crop_pkl\\\\skeleton_dataset_90_10.pkl'\n",
       "auto_scale_lr = dict(base_batch_size=128, enable=False)\n",
       "custom_hooks = [\n",
@@ -1575,8 +1603,8 @@
       "    ])\n",
       "work_dir = './work_dirs\\\\my_stgcnpp'\n",
       "\n",
-      "07/31 20:22:25 - mmengine - \u001b[4m\u001b[97mINFO\u001b[0m - Distributed training is not used, all SyncBatchNorm (SyncBN) layers in the model will be automatically reverted to BatchNormXd layers if they are used.\n",
-      "07/31 20:22:25 - mmengine - \u001b[4m\u001b[97mINFO\u001b[0m - Hooks will be executed in the following order:\n",
+      "08/01 02:41:56 - mmengine - \u001b[4m\u001b[97mINFO\u001b[0m - Distributed training is not used, all SyncBatchNorm (SyncBN) layers in the model will be automatically reverted to BatchNormXd layers if they are used.\n",
+      "08/01 02:41:56 - mmengine - \u001b[4m\u001b[97mINFO\u001b[0m - Hooks will be executed in the following order:\n",
       "before_run:\n",
       "(VERY_HIGH   ) RuntimeInfoHook                    \n",
       "(BELOW_NORMAL) LoggerHook                         \n",
@@ -1669,10 +1697,10 @@
       "\n",
       "size mismatch for cls_head.fc.weight: copying a param with shape torch.Size([60, 256]) from checkpoint, the shape in current model is torch.Size([2, 256]).\n",
       "size mismatch for cls_head.fc.bias: copying a param with shape torch.Size([60]) from checkpoint, the shape in current model is torch.Size([2]).\n",
-      "07/31 20:22:26 - mmengine - \u001b[4m\u001b[97mINFO\u001b[0m - 289 videos remain after valid thresholding\n",
-      "07/31 20:22:26 - mmengine - \u001b[5m\u001b[4m\u001b[33mWARNING\u001b[0m - The prefix is not set in metric class DumpResults.\n",
+      "08/01 02:41:56 - mmengine - \u001b[4m\u001b[97mINFO\u001b[0m - 289 videos remain after valid thresholding\n",
+      "08/01 02:41:56 - mmengine - \u001b[5m\u001b[4m\u001b[33mWARNING\u001b[0m - The prefix is not set in metric class DumpResults.\n",
       "✅ test done: embeddings=(289, 10, 256), labels=(289, 1), ids=(289,)\n",
-      "07/31 20:22:33 - mmengine - \u001b[4m\u001b[97mINFO\u001b[0m - \n",
+      "08/01 02:42:04 - mmengine - \u001b[4m\u001b[97mINFO\u001b[0m - \n",
       "------------------------------------------------------------\n",
       "System environment:\n",
       "    sys.platform: win32\n",
@@ -1714,7 +1742,7 @@
       "    GPU number: 1\n",
       "------------------------------------------------------------\n",
       "\n",
-      "07/31 20:22:33 - mmengine - \u001b[4m\u001b[97mINFO\u001b[0m - Config:\n",
+      "08/01 02:42:04 - mmengine - \u001b[4m\u001b[97mINFO\u001b[0m - Config:\n",
       "ann_file = 'D:\\\\golfDataset\\\\dataset\\\\train\\\\crop_pkl\\\\skeleton_dataset_90_10.pkl'\n",
       "auto_scale_lr = dict(base_batch_size=128, enable=False)\n",
       "custom_hooks = [\n",
@@ -1899,8 +1927,8 @@
       "    ])\n",
       "work_dir = './work_dirs\\\\my_stgcnpp'\n",
       "\n",
-      "07/31 20:22:33 - mmengine - \u001b[4m\u001b[97mINFO\u001b[0m - Distributed training is not used, all SyncBatchNorm (SyncBN) layers in the model will be automatically reverted to BatchNormXd layers if they are used.\n",
-      "07/31 20:22:33 - mmengine - \u001b[4m\u001b[97mINFO\u001b[0m - Hooks will be executed in the following order:\n",
+      "08/01 02:42:04 - mmengine - \u001b[4m\u001b[97mINFO\u001b[0m - Distributed training is not used, all SyncBatchNorm (SyncBN) layers in the model will be automatically reverted to BatchNormXd layers if they are used.\n",
+      "08/01 02:42:04 - mmengine - \u001b[4m\u001b[97mINFO\u001b[0m - Hooks will be executed in the following order:\n",
       "before_run:\n",
       "(VERY_HIGH   ) RuntimeInfoHook                    \n",
       "(BELOW_NORMAL) LoggerHook                         \n",
@@ -1993,10 +2021,10 @@
       "\n",
       "size mismatch for cls_head.fc.weight: copying a param with shape torch.Size([60, 256]) from checkpoint, the shape in current model is torch.Size([2, 256]).\n",
       "size mismatch for cls_head.fc.bias: copying a param with shape torch.Size([60]) from checkpoint, the shape in current model is torch.Size([2]).\n",
-      "07/31 20:22:33 - mmengine - \u001b[4m\u001b[97mINFO\u001b[0m - 1457 videos remain after valid thresholding\n",
-      "07/31 20:22:33 - mmengine - \u001b[5m\u001b[4m\u001b[33mWARNING\u001b[0m - The prefix is not set in metric class DumpResults.\n",
+      "08/01 02:42:05 - mmengine - \u001b[4m\u001b[97mINFO\u001b[0m - 1457 videos remain after valid thresholding\n",
+      "08/01 02:42:05 - mmengine - \u001b[5m\u001b[4m\u001b[33mWARNING\u001b[0m - The prefix is not set in metric class DumpResults.\n",
       "✅ train done: embeddings=(1457, 10, 256), labels=(1457, 1), ids=(1457,)\n",
-      "07/31 20:23:05 - mmengine - \u001b[4m\u001b[97mINFO\u001b[0m - \n",
+      "08/01 02:42:39 - mmengine - \u001b[4m\u001b[97mINFO\u001b[0m - \n",
       "------------------------------------------------------------\n",
       "System environment:\n",
       "    sys.platform: win32\n",
@@ -2038,7 +2066,7 @@
       "    GPU number: 1\n",
       "------------------------------------------------------------\n",
       "\n",
-      "07/31 20:23:06 - mmengine - \u001b[4m\u001b[97mINFO\u001b[0m - Config:\n",
+      "08/01 02:42:40 - mmengine - \u001b[4m\u001b[97mINFO\u001b[0m - Config:\n",
       "ann_file = 'D:\\\\golfDataset\\\\dataset\\\\train\\\\crop_pkl\\\\skeleton_dataset_90_10.pkl'\n",
       "auto_scale_lr = dict(base_batch_size=128, enable=False)\n",
       "custom_hooks = [\n",
@@ -2223,8 +2251,8 @@
       "    ])\n",
       "work_dir = './work_dirs\\\\my_stgcnpp'\n",
       "\n",
-      "07/31 20:23:06 - mmengine - \u001b[4m\u001b[97mINFO\u001b[0m - Distributed training is not used, all SyncBatchNorm (SyncBN) layers in the model will be automatically reverted to BatchNormXd layers if they are used.\n",
-      "07/31 20:23:06 - mmengine - \u001b[4m\u001b[97mINFO\u001b[0m - Hooks will be executed in the following order:\n",
+      "08/01 02:42:40 - mmengine - \u001b[4m\u001b[97mINFO\u001b[0m - Distributed training is not used, all SyncBatchNorm (SyncBN) layers in the model will be automatically reverted to BatchNormXd layers if they are used.\n",
+      "08/01 02:42:40 - mmengine - \u001b[4m\u001b[97mINFO\u001b[0m - Hooks will be executed in the following order:\n",
       "before_run:\n",
       "(VERY_HIGH   ) RuntimeInfoHook                    \n",
       "(BELOW_NORMAL) LoggerHook                         \n",
@@ -2317,8 +2345,8 @@
       "\n",
       "size mismatch for cls_head.fc.weight: copying a param with shape torch.Size([60, 256]) from checkpoint, the shape in current model is torch.Size([2, 256]).\n",
       "size mismatch for cls_head.fc.bias: copying a param with shape torch.Size([60]) from checkpoint, the shape in current model is torch.Size([2]).\n",
-      "07/31 20:23:06 - mmengine - \u001b[4m\u001b[97mINFO\u001b[0m - 164 videos remain after valid thresholding\n",
-      "07/31 20:23:06 - mmengine - \u001b[5m\u001b[4m\u001b[33mWARNING\u001b[0m - The prefix is not set in metric class DumpResults.\n",
+      "08/01 02:42:40 - mmengine - \u001b[4m\u001b[97mINFO\u001b[0m - 164 videos remain after valid thresholding\n",
+      "08/01 02:42:40 - mmengine - \u001b[5m\u001b[4m\u001b[33mWARNING\u001b[0m - The prefix is not set in metric class DumpResults.\n",
       "✅ valid done: embeddings=(164, 10, 256), labels=(164, 1), ids=(164,)\n",
       "\n",
       "\n",
@@ -2346,7 +2374,7 @@
     "IDS_DIR      = CUR_DIR / 'ids_txt'\n",
     "TS_ENV       = 'timesformer'\n",
     "STGCN_ENV    = 'mmaction'\n",
-    "MODEL        = 'D:\\\\mmaction2\\\\checkpoints\\\\stgcnpp_8xb16-joint-u100-80e_ntu60-xsub-keypoint-2d_20221228-86e1e77a.pth'\n",
+    "MODEL        = \"D:\\mmaction2\\work_dirs\\my_stgcnpp\\epoch_2.pth\"\n",
     "SPLIT_RATIO  = (0.9, 0.1)    # train/valid (train 폴더 내에서만 분리)\n",
     "SEED         = 124124\n",
     "TRAIN_ROOT   = ROOT / \"train\"\n",
