--- a/golf/mmAction2_finetune/pkl_compare.ipynb
+++ b/golf/mmAction2_finetune/pkl_compare.ipynb
@@ -64970,7 +64970,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "f481e6d0",
    "metadata": {},
    "outputs": [
@@ -65003,8 +65003,8 @@
     "from pathlib import Path\n",
     "\n",
     "PKL_PATH_1 = Path(r\"D:\\golfDataset\\dataset\\crop_pkl\\ntu60_2d.pkl\")     # MMAction2 예시\n",
-    "PKL_PATH_2 = Path(r\"D:\\golfDataset\\dataset\\crop_pkl\\test.pkl\")        # 너가 만든 것\n",
-    "PKL_PATH_3 = Path(r\"D:\\golfDataset\\dataset\\crop_pkl\\test_unnorm.pkl\")\n",
+    "PKL_PATH_2 = Path(r\"D:\\golfDataset\\dataset\\crop_pkl\\train.pkl\")        # 너가 만든 것\n",
+    "PKL_PATH_3 = Path(r\"D:\\golfDataset\\dataset\\crop_pkl\\train_unnorm.pkl\")\n",
     "\n",
     "def print_split_info(pkl_path):\n",
     "    with open(pkl_path, 'rb') as f:\n",
