--- a/golf/preprocessing/video_processing/extract_timesformer_per_video.ipynb
+++ b/golf/preprocessing/video_processing/extract_timesformer_per_video.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "2ca35136",
    "metadata": {},
    "outputs": [
@@ -48,7 +48,7 @@
     "PER_VIDEO_DIR.mkdir(parents=True, exist_ok=True)\n",
     "MODEL_PATH = Path(r'D:/Jabez/golf/Timesformer_finetune/timesformer_finetuned.pth')\n",
     "PRETRAINED = Path(r'D:/timesformer/pretrained/TimeSformer_divST_96x4_224_K600.pyth')\n",
-    "NUM_FRAMES = 32    # 비디오에서 추출할 프레임 수\n",
+    "NUM_FRAMES = 96    # 비디오에서 추출할 프레임 수, pretrained 모델이 96이므로, 이에 맞춤\n",
     "# 일반적으로 스윙은 2초 이상(jpg 결합이 30fps 기준, 120프레임은 필요)\n",
     "CLIPS_PER_VID = 2\n",
     "IMG_SIZE = 224\n",
