--- a/golf/preprocessing/clean_up/clean_CSVMP4.ipynb
+++ b/golf/preprocessing/clean_up/clean_CSVMP4.ipynb
@@ -11,47 +11,21 @@
      "output_type": "stream",
      "text": [
       "-- Cleaning: balanced_true --\n",
-      "Removed unmatched CSV: D:\\golfDataset\\dataset\\train\\balanced_true\\crop_keypoint\\20201118_General_014_DOC_A_M40_MT_016_crop.csv\n",
-      "Removed unmatched CSV: D:\\golfDataset\\dataset\\train\\balanced_true\\crop_keypoint\\20201120_General_024_NOC_A_M40_MM_063_crop.csv\n",
-      "Removed unmatched CSV: D:\\golfDataset\\dataset\\train\\balanced_true\\crop_keypoint\\20201127_General_056_DOC_A_F20_MM_025_crop.csv\n",
-      "Removed unmatched CSV: D:\\golfDataset\\dataset\\train\\balanced_true\\crop_keypoint\\20201117_General_009_DOC_A_M40_SM_015_crop.csv\n",
-      "Removed unmatched CSV: D:\\golfDataset\\dataset\\train\\balanced_true\\crop_keypoint\\20201127_General_052_DOS_A_F30_MM_054_crop.csv\n",
-      "Removed unmatched CSV: D:\\golfDataset\\dataset\\train\\balanced_true\\crop_keypoint\\20201123_General_032_DOS_A_F30_MM_063_crop.csv\n",
-      "Removed unmatched CSV: D:\\golfDataset\\dataset\\train\\balanced_true\\crop_keypoint\\20201117_General_010_DOC_A_M40_MM_031_crop.csv\n",
-      "Removed unmatched CSV: D:\\golfDataset\\dataset\\train\\balanced_true\\crop_keypoint\\20201118_General_018_DOC_A_M40_MM_013_crop.csv\n",
-      "Removed unmatched CSV: D:\\golfDataset\\dataset\\train\\balanced_true\\crop_keypoint\\20201123_General_032_DOS_A_F30_MM_044_crop.csv\n",
-      "Removed unmatched CSV: D:\\golfDataset\\dataset\\train\\balanced_true\\crop_keypoint\\20201124_General_033_DOS_A_M40_MM_061_crop.csv\n",
-      "Removed unmatched CSV: D:\\golfDataset\\dataset\\train\\balanced_true\\crop_keypoint\\20201127_General_056_DOC_A_F20_MM_056_crop.csv\n",
-      "Removed unmatched CSV: D:\\golfDataset\\dataset\\train\\balanced_true\\crop_keypoint\\20201127_General_052_DOS_A_F30_MM_035_crop.csv\n",
-      "Removed unmatched CSV: D:\\golfDataset\\dataset\\train\\balanced_true\\crop_keypoint\\20201127_General_052_DOS_A_F30_MM_084_crop.csv\n",
-      "Removed unmatched CSV: D:\\golfDataset\\dataset\\train\\balanced_true\\crop_keypoint\\20201120_General_025_DOC_A_M40_MM_037_crop.csv\n",
-      "Removed unmatched CSV: D:\\golfDataset\\dataset\\train\\balanced_true\\crop_keypoint\\20201127_General_056_DOC_A_F20_MM_011_crop.csv\n",
-      "Removed unmatched CSV: D:\\golfDataset\\dataset\\train\\balanced_true\\crop_keypoint\\20201124_General_033_DOS_A_M40_MM_070_crop.csv\n",
-      "Removed unmatched CSV: D:\\golfDataset\\dataset\\train\\balanced_true\\crop_keypoint\\20201120_General_023_DOC_A_M40_MM_048_crop.csv\n",
-      "Removed unmatched CSV: D:\\golfDataset\\dataset\\train\\balanced_true\\crop_keypoint\\20201123_General_032_DOS_A_F30_MM_084_crop.csv\n",
-      "Removed unmatched CSV: D:\\golfDataset\\dataset\\train\\balanced_true\\crop_keypoint\\20201127_General_052_DOS_A_F30_MM_085_crop.csv\n",
-      "Removed unmatched CSV: D:\\golfDataset\\dataset\\train\\balanced_true\\crop_keypoint\\20201118_General_018_DOC_A_M40_MM_017_crop.csv\n",
-      "Removed unmatched CSV: D:\\golfDataset\\dataset\\train\\balanced_true\\crop_keypoint\\20201127_General_052_DOS_A_F30_MM_043_crop.csv\n",
-      "Removed unmatched CSV: D:\\golfDataset\\dataset\\train\\balanced_true\\crop_keypoint\\20201123_General_032_DOS_A_F30_MM_088_crop.csv\n",
-      "Removed unmatched CSV: D:\\golfDataset\\dataset\\train\\balanced_true\\crop_keypoint\\20201118_General_020_DOC_A_F50_MM_068_crop.csv\n",
-      "Removed unmatched CSV: D:\\golfDataset\\dataset\\train\\balanced_true\\crop_keypoint\\20201118_General_016_DOC_A_F30_SM_019_crop.csv\n",
-      "Removed unmatched CSV: D:\\golfDataset\\dataset\\train\\balanced_true\\crop_keypoint\\20201120_General_021_DOC_A_M40_MM_060_crop.csv\n",
-      "Removed unmatched CSV: D:\\golfDataset\\dataset\\train\\balanced_true\\crop_keypoint\\20201124_General_033_DOS_A_M40_MM_071_crop.csv\n",
-      "Removed unmatched CSV: D:\\golfDataset\\dataset\\train\\balanced_true\\crop_keypoint\\20201124_General_033_DOS_A_M40_MM_032_crop.csv\n",
-      "Removed unmatched CSV: D:\\golfDataset\\dataset\\train\\balanced_true\\crop_keypoint\\20201118_General_020_DOC_A_F50_MM_069_crop.csv\n",
-      "Removed unmatched CSV: D:\\golfDataset\\dataset\\train\\balanced_true\\crop_keypoint\\20201120_General_025_DOC_A_M40_MM_041_crop.csv\n",
-      "Removed unmatched CSV: D:\\golfDataset\\dataset\\train\\balanced_true\\crop_keypoint\\20201120_General_022_DOC_A_M40_MS_067_crop.csv\n",
-      "Removed unmatched CSV: D:\\golfDataset\\dataset\\train\\balanced_true\\crop_keypoint\\20201120_General_024_DOC_A_M40_MM_048_crop.csv\n",
-      "Removed unmatched CSV: D:\\golfDataset\\dataset\\train\\balanced_true\\crop_keypoint\\20201127_General_052_DOS_A_F30_MM_079_crop.csv\n",
+      "Removed unmatched CSV: D:\\golfDataset\\dataset\\test\\balanced_true\\crop_keypoint\\20201211_General_124_DOC_A_F40_MM_056_crop.csv\n",
+      "Removed unmatched CSV: D:\\golfDataset\\dataset\\test\\balanced_true\\crop_keypoint\\20201211_General_118_DOC_A_M40_MM_074_crop.csv\n",
+      "Removed unmatched CSV: D:\\golfDataset\\dataset\\test\\balanced_true\\crop_keypoint\\20201216_General_134_DOS_A_F30_MM_014_crop.csv\n",
+      "Removed unmatched CSV: D:\\golfDataset\\dataset\\test\\balanced_true\\crop_keypoint\\20201211_General_124_DOC_A_F40_MM_016_crop.csv\n",
+      "Removed unmatched CSV: D:\\golfDataset\\dataset\\test\\balanced_true\\crop_keypoint\\20201211_General_124_DOC_A_F40_MM_029_crop.csv\n",
+      "Removed unmatched CSV: D:\\golfDataset\\dataset\\test\\balanced_true\\crop_keypoint\\20201211_General_124_DOC_A_F40_MM_041_crop.csv\n",
+      "Removed unmatched CSV: D:\\golfDataset\\dataset\\test\\balanced_true\\crop_keypoint\\20201211_General_117_DOC_A_M30_MM_002_crop.csv\n",
       "Completed: balanced_true\n",
       "\n",
       "-- Cleaning: false --\n",
-      "Removed unmatched CSV: D:\\golfDataset\\dataset\\train\\false\\crop_keypoint\\20201117_General_006_DOC_A_M40_BS_009_crop.csv\n",
-      "Removed unmatched CSV: D:\\golfDataset\\dataset\\train\\false\\crop_keypoint\\20201117_General_006_DOC_A_M40_BS_021_crop.csv\n",
-      "Removed unmatched CSV: D:\\golfDataset\\dataset\\train\\false\\crop_keypoint\\20201117_General_005_DOC_A_M40_MM_058_crop.csv\n",
-      "Removed unmatched CSV: D:\\golfDataset\\dataset\\train\\false\\crop_keypoint\\20201123_General_030_DOS_A_M40_MM_040_crop.csv\n",
-      "Removed unmatched CSV: D:\\golfDataset\\dataset\\train\\false\\crop_keypoint\\20201123_General_030_DOS_A_M40_MM_049_crop.csv\n",
-      "Removed unmatched CSV: D:\\golfDataset\\dataset\\train\\false\\crop_keypoint\\20201117_General_005_DOC_A_M40_MM_035_crop.csv\n",
+      "Removed unmatched CSV: D:\\golfDataset\\dataset\\test\\false\\crop_keypoint\\20201210_General_114_NOC_A_M30_MM_075_crop.csv\n",
+      "Removed unmatched CSV: D:\\golfDataset\\dataset\\test\\false\\crop_keypoint\\20201210_General_114_DOC_A_M30_MM_012_crop.csv\n",
+      "Removed unmatched CSV: D:\\golfDataset\\dataset\\test\\false\\crop_keypoint\\20201210_General_112_DOC_A_M20_MM_019_crop.csv\n",
+      "Removed unmatched CSV: D:\\golfDataset\\dataset\\test\\false\\crop_keypoint\\20201210_General_112_DOC_A_M20_MM_043_crop.csv\n",
+      "Removed unmatched CSV: D:\\golfDataset\\dataset\\test\\false\\crop_keypoint\\20201210_General_112_DOC_A_M20_MM_032_crop.csv\n",
       "Completed: false\n",
       "\n",
       "All cleaning tasks finished.\n"
@@ -113,7 +87,7 @@
     "\n",
     "def main():\n",
     "    # test 폴더로 청소, train 원하면 train으로 변경\n",
-    "    base_dir = Path(r\"D:\\golfDataset\\dataset\\train\")\n",
+    "    base_dir = Path(r\"D:\\golfDataset\\dataset\\test\")\n",
     "    # 상위 폴더 리스트 (balanced_true, false)\n",
     "    parents = [\"balanced_true\", \"false\"]\n",
     "\n",
