--- a/golf/preprocessing/video_processing/video_crop_and_csv_merged.ipynb
+++ b/golf/preprocessing/video_processing/video_crop_and_csv_merged.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "cf740e9e",
    "metadata": {},
    "outputs": [
@@ -18,37 +18,10 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "train/balanced_true: 100%|██████████| 1235/1235 [00:01<00:00, 625.61it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "⚠️  No valid person in 20201127_General_054_DOC_A_F30_SM_055.mp4\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "train/false: 100%|██████████| 408/408 [00:00<00:00, 33825.03it/s]\n",
-      "test/balanced_true: 100%|██████████| 148/148 [00:00<00:00, 22918.85it/s]\n",
-      "test/false:  30%|██▉       | 44/148 [02:31<11:30,  6.64s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "⚠️  No valid person in 20201210_General_112_DOC_A_M20_MM_045.mp4\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "test/false: 100%|██████████| 148/148 [45:53<00:00, 18.61s/it]\n"
+      "train/balanced_true: 0it [00:00, ?it/s]\n",
+      "train/false: 0it [00:00, ?it/s]\n",
+      "test/balanced_true: 100%|██████████| 235/235 [1:44:00<00:00, 26.56s/it]\n",
+      "test/false: 0it [00:00, ?it/s]\n"
      ]
     }
    ],
