finetuning pipline completed
파인튜닝 파이프라인(train, test, analyze)는 완성

이후 하이퍼파라미터 최적화와 과적합 방지 작업

--- a/golf/mmAction2_finetune/legacy/result_analysis.ipynb
+++ b/golf/mmAction2_finetune/legacy/result_analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "ff901fe1",
    "metadata": {},
    "outputs": [
@@ -184,7 +184,7 @@
     "from sklearn.metrics import confusion_matrix\n",
     "import os\n",
     "\n",
-    "result_dir = r\"D:\\mmaction2\\result\"\n",
+    "result_dir = r\"D:\\Jabez\\golf\\mmAction2_finetune\\finetuned_model\\results\"\n",
     "epoch_range = range(1, 15)  # 1~14\n",
     "\n",
     "accuracies = []\n",
